# SensorPy

./: .coveragerc  .gitignore  .gitmodules  README.md  pyproject.toml
docs/: DEVELOPER_GUIDELINES.md  SENSOR_CONNECTION_GUIDE.md
examples/: basic_usage.py
sensorpy/: __init__.py  exceptions.py  sensor_base.py  sensor_manager.py  shtc3_sensor.py  sps30_sensor.py  stc31c_sensor.py  structures.py
tests/: conftest.py  test_sensor_base.py  test_sensor_manager.py
